--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,27 +79,18 @@ android:focusableInTouchMode="true" >
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Connect"
+        android:text="@string/connectText"
         android:id="@+id/connectButton"
         android:layout_alignBottom="@+id/runButton"
         android:layout_alignParentStart="true"
         android:onClick="connectButtonOnClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Get Card Info"
-        android:id="@+id/getCardInfoButton"
-        android:onClick="getCardInfoButtonOnClick"
-        android:layout_below="@+id/ATR_textView"
-        android:layout_centerHorizontal="true" />
 
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
-        android:ems="10"
+        android:ems="7"
         android:id="@+id/operationText"
         android:lines="10"
         android:background="#ffffffff"
